# pylitex

./: .gitignore  README.md  __main__.py  pyproject.toml
litex/: __init__.py  litex.py
pylitex/: base_info.py  repl_interactor.py  run_file.py
tests/: test_run_file.py
